# Vote_transferring-mechanism

./: .env.example  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  SECURITY_UPGRADE.md  app.py  dashboard.html  display_server.py  extract_text.py  index.html  run_system.bat  walkthrough.md
cpp/: CMakeLists.txt  main.cpp
cpp/include/core/: Block.h  Blockchain.h
cpp/src/: main.cpp
cpp/src/client/: VoterClient.cpp
cpp/src/core/: Block.cpp
cpp/src/network/: ShardController.cpp
docs/: API.md  ARCHITECTURE.md  SECURITY.md
include/client/: VoterClient.h
include/core/: SecurePacket.h
include/crypto/: CryptoUtils.h
include/network/: ShardController.h
scripts/: generate_keys.py  generate_ssl_cert.sh  run_system.bat  run_system.sh
server/observer_node/: display_server.py
server/voting_node/: app.py  auth.py  crypto_utils.py  database.py  requirements.txt
src/core/: Blockchain.cpp  SecurePacket.cpp
web/voting_booth/: index.html
